finish initial user auth and it's docs
