# apps/auth-service/src/controllers/authController.ts
@@ -1,14 +1,21 @@
 import { NextFunction, Request, Response } from "express";
+import bcrypt from "bcryptjs";
+import jwt from "jsonwebtoken";
+
 import {
   checkOtpRestrictions,
+  handleForgotPassword,
   sendOtp,
   trackOtpRequests,
   validateRegisterationData,
+  verifyForogtPasswordOtp,
+  verifyOtp,
 } from "../utils/authHelper";
 import prisma from "@packages/libs/prisma";
-import { ValidationError } from "@packages/error-handler";
+import { AuthError, ValidationError } from "@packages/error-handler";
+import { setCookie } from "../utils/cookies/setCookie";
 
-export const userRegister = async (
+export const RegisterUser = async (
   req: Request,
   res: Response,
   next: NextFunction
@@ -32,6 +39,130 @@ export const userRegister = async (
 
     res.status(200).json({
       message: "OTP sent to email. Please verify your acc.",
+    });
+  } catch (err) {
+    return next(err);
+  }
+};
+
+export const verifyUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, otp, password, name } = req.body;
+    if (!email || !otp || !password || !name)
+      return next(
+        new ValidationError("Email, OTP, Name and Password are required!")
+      );
+
+    const existingUser = await prisma.users.findUnique({
+      where: { email },
+    });
+    if (existingUser)
+      return next(new ValidationError("User already exists with this email!"));
+
+    await verifyOtp(email, otp, next);
+    const hashedPassword = await bcrypt.hash(password, 10);
+
+    await prisma.users.create({
+      data: { name, email, password: hashedPassword },
+    });
+    res.status(201).json({
+      success: true,
+      message: "User registered successfully",
+    });
+  } catch (err) {
+    return next(err);
+  }
+};
+
+export const loginUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, password } = req.body;
+    if (!email || !password)
+      return next(new ValidationError("Email and Password are required!"));
+
+    const user = await prisma.users.findUnique({ where: { email } });
+    if (!user) return next(new AuthError("User doesn't exist!"));
+
+    const isMatching = await bcrypt.compare(password, user.password!);
+    if (!isMatching) return next(new AuthError("Invalid credentials!"));
+
+    const accessToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.ACCESS_TOKEN_SECRET as string,
+      {
+        expiresIn: "30m",
+      }
+    );
+    const refreshToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.REFRESH_TOKEN_SECRET as string,
+      {
+        expiresIn: "7d",
+      }
+    );
+    setCookie(res, "refresh_token", refreshToken);
+    setCookie(res, "access_token", accessToken);
+
+    res.status(200).json({
+      message: "Login successful!",
+      user: { id: user.id, email: user.email, username: user.name },
+    });
+  } catch (err) {
+    return next(err);
+  }
+};
+
+export const userForgotPassword = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  await handleForgotPassword(req, res, next, "user");
+};
+
+export const verifyUserForgotPassword = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  await verifyForogtPasswordOtp(req, res, next);
+};
+
+export const userResetPassword = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, newPassword } = req.body;
+    if (!email || !newPassword)
+      return next(new ValidationError("Email and new password are required!"));
+
+    const user = await prisma.users.findUnique({ where: { email } });
+    if (!user) return next(new ValidationError("User doesn't exist!"));
+
+    const isSamePassword = await bcrypt.compare(newPassword, user.password!);
+    if (isSamePassword)
+      return next(
+        new ValidationError("New password must be different from the old one!")
+      );
+
+    const hashedPassword = await bcrypt.hash(newPassword, 10);
+    await prisma.users.update({
+      where: { email },
+      data: { password: hashedPassword },
+    });
+
+    res.status(200).json({
+      message: "Password reset successfully!",
     });
   } catch (err) {
     return next(err);
