# apps/auth-service/src/routes/authRouter.ts
@@ -1,8 +1,20 @@
 import express, { Router } from "express";
-import { userRegister } from "../controllers/authController";
+import {
+  loginUser,
+  RegisterUser,
+  userForgotPassword,
+  userResetPassword,
+  verifyUser,
+  verifyUserForgotPassword,
+} from "../controllers/authController";
 
 const router: Router = express.Router();
 
-router.post("/user-registeration", userRegister);
+router.post("/user-registeration", RegisterUser);
+router.post("/verify-user", verifyUser);
+router.post("/login-user", loginUser);
+router.post("/forgot-password-user", userForgotPassword);
+router.post("/reset-password-user", userResetPassword);
+router.post("/verify-forgot-password-user", verifyUserForgotPassword);
 
 export default router;
